# gphoto2pp

./: CMakeLists.txt  gphoto2pp.pc.in
